# borderless-mouse

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/bm-clipboard/: Cargo.toml
crates/bm-clipboard/src/: lib.rs
crates/bm-core/: Cargo.toml
crates/bm-core/src/: config.rs  input.rs  lib.rs  network.rs  protocol.rs  transport.rs
crates/bm-core/tests/: handshake.rs
crates/bm-gui/: Cargo.toml
crates/bm-gui/src/: app.rs  lib.rs  log_capture.rs  runtime.rs
crates/bm-input-linux/: Cargo.toml
crates/bm-input-linux/src/: lib.rs  wayland.rs
crates/bm-input-macos/: Cargo.toml
crates/bm-input-macos/src/: lib.rs
crates/bm-input-windows/: Cargo.toml
crates/bm-input-windows/src/: capture.rs  emulate.rs  keymap.rs  lib.rs
docs/: index.html
src/: main.rs
