[workspace]
resolver = "2"
members = [
    "crates/bm-core",
    "crates/bm-input-linux",
    "crates/bm-input-macos",
    "crates/bm-clipboard",
    "crates/bm-gui",
]

[package]
name = "borderless-mouse"
version = "1.0.2"
edition = "2021"
description = "Software KVM — share mouse, keyboard and clipboard across computers"

[dependencies]
bm-core = { path = "crates/bm-core" }
bm-input-linux = { path = "crates/bm-input-linux" }
bm-input-macos = { path = "crates/bm-input-macos" }
bm-clipboard = { path = "crates/bm-clipboard" }
bm-gui = { path = "crates/bm-gui" }

egui = "0.31"
eframe = "0.31"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
