[package]
name = "bm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
directories = "6"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "time"] }
