[package]
name = "bm-input-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
bm-core = { path = "../bm-core" }
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
